--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.21.0",
+    "@cucumber/cucumber": "^9.1.0",
     "@nrwl/eslint-plugin-nx": "15.8.9",
     "@nrwl/jest": "15.8.9",
     "@nrwl/js": "15.8.9",
@@ -17,6 +19,7 @@
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/jsdom": "^21.1.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -29,20 +32,23 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "history": "^5.3.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsdom-global": "^3.0.2",
     "nx": "15.3.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.0.5",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.5",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
     "tslib": "^2.3.0"
   }
 }
