--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.21.0",
     "@cucumber/cucumber": "^9.1.0",
-    "@nrwl/eslint-plugin-nx": "15.8.9",
-    "@nrwl/jest": "15.8.9",
-    "@nrwl/js": "15.8.9",
-    "@nrwl/linter": "15.8.9",
-    "@nrwl/react": "^15.8.9",
-    "@nrwl/webpack": "15.8.9",
-    "@nrwl/workspace": "15.3.0",
+    "@nrwl/eslint-plugin-nx": "15.9.1",
+    "@nrwl/jest": "15.9.1",
+    "@nrwl/js": "15.9.1",
+    "@nrwl/linter": "15.9.1",
+    "@nrwl/react": "15.9.1",
+    "@nrwl/webpack": "15.9.1",
+    "@nrwl/workspace": "15.9.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
@@ -36,7 +36,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom-global": "^3.0.2",
-    "nx": "15.3.0",
+    "nx": "15.9.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
@@ -52,3 +52,4 @@
     "tslib": "^2.3.0"
   }
 }
+
