feat: Added nx bdd command to run bdd tests

--- a/packages/front-end/project.json
+++ b/packages/front-end/project.json
@@ -84,6 +84,17 @@
           "codeCoverage": true
         }
       }
+    },
+    "bdd": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/front-end",
+        "commands": [
+          {
+            "command": "npx cucumber-js --profile default"
+          }
+        ]
+      }
     }
   },
   "tags": []
