--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/jest": "^29.4.0",
     "@types/jsdom": "^21.1.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/sinon": "^10.0.13",
+    "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "^29.4.1",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
@@ -36,10 +43,13 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom-global": "^3.0.2",
+    "mocha": "^10.2.0",
     "nx": "15.9.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5",
@@ -52,4 +62,3 @@
     "tslib": "^2.3.0"
   }
 }
-
