--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "14.0.0",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsdom": "^21.1.1",
     "@types/mocha": "^10.0.1",
@@ -28,6 +29,7 @@
     "@types/react-dom": "18.0.11",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "^29.4.1",
@@ -50,12 +52,14 @@
     "react-test-renderer": "18.2.0",
     "sinon": "^15.0.3",
     "sinon-chai": "^3.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.10.0",
