test: updated docs and tests to be ready for development

--- a/packages/front-end/project.json
+++ b/packages/front-end/project.json
@@ -47,7 +47,7 @@
         }
       }
     },
-    "serve": {
+    "start": {
       "executor": "@nrwl/webpack:dev-server",
       "defaultConfiguration": "development",
       "options": {
