--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "react": "18.2.0",
+    "react-d3-tree": "^3.5.1",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.10.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uninstall": "^0.0.0"
   }
 }
