--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@balkangraph/familytree.js": "^1.7.28",
     "express": "^4.18.2",
     "react": "18.2.0",
     "react-d3-tree": "^3.5.1",
