feat: Added database and refacto bdd suite to enable testing with and without mocking database

--- a/packages/back-end/project.json
+++ b/packages/back-end/project.json
@@ -51,10 +51,19 @@
         }
       ],
       "options": {
-        "cwd": "packages/back-end",
-        "commands": [
-          "npx cucumber-js --profile default"
-        ]
+        "cwd": "packages/back-end"
+      },
+      "configurations": {
+        "default": {
+          "commands": [
+            "npx cucumber-js --profile default"
+          ]
+        },
+        "int": {
+          "commands": [
+            "npx cucumber-js --profile integration"
+          ]
+        }
       }
     },
     "start": {
