--- a/packages/back-end/.eslintrc.json
+++ b/packages/back-end/.eslintrc.json
@@ -4,7 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "no-console": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
