--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,16 @@
         "semi": ["error", "always"],
         "no-console": "error",
         "no-var": "error",
-        "prefer-const": "error"
+        "prefer-const": "error",
+        "@typescript-eslint/no-unused-vars": [
+          "warn", // or "error"
+          { 
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
+        ],
+        "linebreak-style": "off"
       }
     },
     {
