--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsdom": "^21.1.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -61,6 +62,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "neo4j-driver": "^5.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
