--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.17",
@@ -61,6 +62,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "neo4j-driver": "^5.7.0",
