--- a/package.json
+++ b/package.json
@@ -62,10 +62,8 @@
     "@balkangraph/familytree.js": "^1.7.28",
     "express": "^4.18.2",
     "react": "18.2.0",
-    "react-d3-tree": "^3.5.1",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.10.0",
-    "tslib": "^2.3.0",
-    "uninstall": "^0.0.0"
+    "tslib": "^2.3.0"
   }
 }
