--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsdom": "^21.1.1",
@@ -64,6 +65,7 @@
   "dependencies": {
     "@balkangraph/familytree.js": "^1.7.28",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "neo4j-driver": "^5.7.0",
